# snkae

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ecs.h  engine.h  entity.h  game.h  loader.h  menu.h
src/: ecs.c  engine.c  game.c  loader.c  main.c  menu.c
submodules/SDL2/include/: SDL_stdinc.h
submodules/SDL2_image/cmake/: sdl2_image-config.cmake
